--- a/index.html
+++ b/index.html
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button Test</title>
-</head>
-<body>
-    <h1>Button Click Test</h1>
-    
-    <!-- Input for player name -->
-    <input type="text" id="player-name" placeholder="Enter your name"><br><br>
-    
-    <!-- Start Button -->
-    <button id="start-button">Start Game</button>
-
-    <!-- Message displayed after clicking the button -->
-    <p id="message"></p>
-
-    <!-- Link to JavaScript file -->
-    <script>
-        // Adding a console log to see if the button click is detected
-        console.log("Script is loaded");
-
-        // JavaScript for the button click
-        document.getElementById("start-button").onclick = function() {
-            console.log("Button clicked!");
-
-            // Get the player's name from the input field
-            var playerName = document.getElementById("player-name").value;
-            console.log("Entered name:", playerName); // Log the entered name
-
-            // If name is entered, show a message, otherwise prompt for name
-            if (playerName) {
-                document.getElementById("message").innerText = "Welcome, " + playerName + "! Let's start your adventure.";
-            } else {
-                document.getElementById("message").innerText = "Please enter your name first!";
-            }
-        }
-    </script>
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Button Test</title> </head> <body> <h1>Button Click Test</h1> <!-- Input for player name --> <input type="text" id="player-name" placeholder="Enter your name"><br><br> <!-- Start Button --> <button id="start-button">Start Game</button> <!-- Message displayed after clicking the button --> <p id="message"></p> <!-- Link to JavaScript file --> <script> // Adding a console log to see if the button click is detected console.log("Script is loaded"); // JavaScript for the button click document.getElementById("start-button").onclick = function() { console.log("Button clicked!"); // Get the player's name from the input field var playerName = document.getElementById("player-name").value; console.log("Entered name:", playerName); // Log the entered name // If name is entered, show a message, otherwise prompt for name if (playerName) { document.getElementById("message").innerText = "Welcome, " + playerName + "! Let's start your adventure."; } else { document.getElementById("message").innerText = "Please enter your name first!"; } } </script> </body> </html>
